<resources>
    <string name="app_name">WSC_Session1</string>
    <string name="department">Department</string>
    <string name="warranty_date_range">Warranty date range:</string>
    <string name="start_date">Start date:</string>
    <string name="search">Search</string>
    <string name="asset_list">Asset list:</string>
    <string name="_0_assets_from_0">0 assets from 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_date">End date:</string>
</resources>